tests/invalid/unknown-lines1.nxt
# unknown lines
key:
    value 1
